# licensedigger

./: .gitignore  .kde-ci.yml  CMakeLists.txt  README.md  annotations.qrc  directoryparser.cpp  directoryparser.h  licenseregistry.cpp  licenseregistry.h  licenses.qrc  main.cpp  skipparser.cpp  skipparser.h
annotations/: generated-files.txt  missing-headers-blacklist.txt
autotests/: CMakeLists.txt  test_copyrightconvert.cpp  test_copyrightconvert.h  test_headerdetection.cpp  test_headerdetection.h  test_licenseconvert.cpp  test_licenseconvert.h  test_licensefilesavailable.cpp  test_licensefilesavailable.h  test_skipparser.cpp  test_skipparser.h  testdata.qrc
autotests/testdata/AGPL-3.0-or-later/: nextcloud-groufolder.php
autotests/testdata/BSD-2-Clause/: Findepoll.cmake
autotests/testdata/BSD-3-Clause/: FindPackageKitQt2.cmake  Findepoxy.cmake  ecm_CMakeLists.txt
autotests/testdata/GPL-2.0-only/: callview.h  menufile.h
autotests/testdata/GPL-2.0-only_OR_GPL-3.0-only/: xcursortheme.h
autotests/testdata/GPL-2.0-only_OR_GPL-3.0-only_OR_LicenseRef-KDE-Accepted-GPL/: choqoktools.h
autotests/testdata/GPL-2.0-or-later/: alternativesmodeltest.cpp  compositejob.cpp  gameremovedtiles.h  katomic_atom.h  killbots_main.cpp  kmahjongg.h  kreversiplayer.h
autotests/testdata/GPL-3.0-only_OR_LicenseRef-KDE-Accepted-GPL/: breeze.script.cmake
autotests/testdata/LGPL-2.0-or-later/: AboutPage.qml  SimplePage.qml  kbounce_ball.h  kbounce_renderer.h
autotests/testdata/LGPL-2.1-or-later/: grantlee_template.h
autotests/testdata/LGPL-3.0-only_OR_LicenseRef-KDE-Accepted-LGPL/: ContextualHelpButton.qml
autotests/testdata/MIT/: breezeexceptionlist.cpp
autotests/testdata_conversionexamples/: blur.h.spdx  fake_notifications_server.h.spdx  file_without_unrecognized_statement.h.origfile
licenses/BSD-2-Clause/: karchive_unzipper_main  kde-gtk-config_FindXSettingsd  kwin_Findepoll
licenses/BSD-3-Clause/: ecm_cmake  kjs_symboltable
licenses/CC0-1.0/: colorspace
licenses/GPL-2.0-only/: kio_kpasswdserver  messagelib_composerviewbasetest
licenses/GPL-2.0-only_OR_GPL-3.0-only_OR_LicenseRef-KDE-Accepted-GPL/: kdeclarative_formats  kdeconnect_android_uploadnotification  kservice_autotest_nsaplugin  messagelib_stringutil
licenses/GPL-2.0-or-later/: KisSqueezedComboBox_cpp  akonadi-search_akonadisearchdebugdialog  akonadiconsole_agentconfigdialog  breeze-plymouth_plugin  kcodecs_kcharsetstest  kdeconnect-sendfileitemaction  kio_kurlcomboboxtest  kio_usdentrybenchmark  kis_tone_curve_widget  kturtle_sprite  kwin_aurorae  kwin_blur  kwin_scripted_effects_test  messagelib_composerlineedit  messagelib_qgpgmejobexecutor  messagelib_searchcollectionindexingwarning  messagelib_templatesutil  plasmaphonecomponents_homescreencontrols  purpose_alternativesmodeltest  thememanager  wacom-properties
licenses/GPL-2.0_OR_GPL-3.0_OR_LicenseRef-KDE/: kio_kpasswdservertest
licenses/GPL-3.0-only/: batch_exporter
licenses/GPL-3.0-only_OR_LicenseRef-KDE-Accepted-GPL/: breeze-plymouth_breeze.script
licenses/GPL-3.0-or-later/: channels2layers  color_slider  comics_export_dialog  kcalendarcore_testcreateddatecompat  plugin_importer  tablettest
licenses/LGPL-2.0-only/: PluginSettings  kcontacts_ldifconverter  kdbusaddons_kquitapp  kio_cache  kio_kfilebookmarkhandler  kis_hsv_adjustment_filter  kservice_kbuildservicegroupfactory  kservice_kmimetypetrader  ktextwidgets_kfindtest  ktextwidgets_krichtextwidget  kwidgetsaddons_kmessagebox
licenses/LGPL-2.0-only_OR_LGPL-3.0-only/: kio_dndpopupmenuplugin  kio_kcookiejartest  kio_knewfilemenu
licenses/LGPL-2.0-only_OR_LGPL-3.0-only_OR_LicenseRef-KDE-Accepted-LGPL/: kservice_ksycocadevices_p
licenses/LGPL-2.0-only_WITH_Qt-GPL-exception-1.0/: kio_kstatusbarofflineindicator
licenses/LGPL-2.0-or-later/: Canvas  baloo_balooplugin  kactivities_resourceinstance  kbookmarks_kbookmarkdombuilder  kcharselect-translation  kconfig_test_kconf_update  kcontacts_contactgroup  kdeclarative_qtquicksettings  kholidays_holidayregionsmodel  kio_help  kio_joburlcache  kio_kurlcompletion  kirigami_aboutpage  kirigami_simplepage  kis_heightmap_export  kjs_jslock  kmainwindowiface_p  kpublictransport  kservice  kservice_plugintest  kwidgetsaddons_kpagemodel  kwidgetsaddons_kpassworddialog  kwidgetsaddons_kstyleextensions  tga
licenses/LGPL-2.1-only/: kio_des  kprocesslist_unix_procstat
licenses/LGPL-2.1-only_OR_LGPL-3.0-only/: kio_httpserver_p
licenses/LGPL-2.1-only_OR_LGPL-3.0-only_OR_LicenseRef-KDE-Accepted-LGPL/: kcoreaddons_desktoptojson  kio_kbatchrenamejob  kwidgetaddons_ksplittercollapserbuttontest  kwidgetsaddons_kbusyindicatorwidget  libkgapi_taskservice  solid_inhibition
licenses/LGPL-2.1-only_WITH_Qt-LGPL-exception-1.1/: kcoreaddons_kprocesslist
licenses/LGPL-2.1-only_WITH_Qt-LGPL-exception-1.1_OR_LGPL-3.0-only_WITH_Qt-LGPL-exception-1.1_OR_LicenseRef-QTCOMMERCIAL/: kdeclarative_quickviewsharedengine
licenses/LGPL-2.1-or-later/: KoBasicHistogramProducers  KoGenericRegistry  KoTriangleColorSelector  baloo_basicindexingjobtest  kauth_backendsmanager  kitemmodel_kconcatenaterows  kitemmodels_lessthanwidget  knewstuff_knewstuffaction  kwidgetsaddons_kpixmapsequence  (+2 more)
(+227 files in other folders)
